fix: bug bash fixes for account center and console UI
- LOG-13553/LOG-13567: hide date input parts by default,
  show when focused/has value to prevent label overlap
- LOG-13568: fix SelectField padding override via
  higher specificity selector
- LOG-13558: add margin-top to inline notification
- LOG-13566: add 1060px breakpoint to hide sidebar
  on narrow desktop
- LOG-13564: remove isVisible from Tooltip deps
  to prevent flicker

--- a/packages/account/src/App.module.scss
+++ b/packages/account/src/App.module.scss
@@ -129,6 +129,13 @@
     padding-bottom: _.unit(7);
   }
 
+  @media only screen and (max-width: 1060px) {
+    .withSidebar {
+      display: flex;
+      justify-content: center;
+    }
+  }
+
   @media only screen and (max-width: 800px) {
     .main:not(.cardMain) {
       width: auto;
