--- a/packages/account/src/components/Sidebar/index.module.scss
+++ b/packages/account/src/components/Sidebar/index.module.scss
@@ -41,6 +41,14 @@
   flex-shrink: 0;
 }
 
+:global(body.desktop) {
+  @media only screen and (max-width: 1060px) {
+    .sidebar {
+      display: none;
+    }
+  }
+}
+
 :global(body.mobile) {
   .sidebar {
     display: none;
